--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -1,165 +1,274 @@
 <!DOCTYPE html>
 <html lang="de">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="../assets/svg/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Kontaktieren Sie Kristina und Sebastian Hendel, um mehr über ihre Reise und Erfolge im Laufsport zu erfahren.">
-    <meta name="keywords" content="Kristina, Sebastian, Hendel, Laufen, Kontakt, Reise, Erfolge, running, Hendel Running ">
-    <meta name="robots" content="index, follow">
+    <meta
+      name="description"
+      content="Kontaktieren Sie Kristina und Sebastian Hendel, um mehr über ihre Reise und Erfolge im Laufsport zu erfahren."
+    />
+    <meta
+      name="keywords"
+      content="Kristina, Sebastian, Hendel, Laufen, Kontakt, Reise, Erfolge, running, Hendel Running "
+    />
+    <meta name="robots" content="index, follow" />
     <title>Kontakt</title>
-</head>
+  </head>
 
-<body>
-
-    <button class="scrollToTop btn btn-lg btn-dark user-select-none" onclick="scrollToTop()">
-        <img src="../assets/svg/up-arrow-svgrepo-com.svg" width="20" height="20" alt="">
+  <body>
+    <button
+      class="scrollToTop btn btn-lg btn-dark user-select-none"
+      onclick="scrollToTop()"
+      aria-label="Zurück zum Anfang"
+    >
+      <img
+        src="../assets/svg/up-arrow-svgrepo-com.svg"
+        width="20"
+        height="20"
+        alt=""
+      />
     </button>
     <script>
-        function scrollToTop() {
-            document.body.scrollTo({ top: 0, behavior: "smooth" });
-            document.documentElement.scrollTo({ top: 0, behavior: "smooth" });
-        }
+      function scrollToTop() {
+        document.body.scrollTo({ top: 0, behavior: "smooth" });
+        document.documentElement.scrollTo({ top: 0, behavior: "smooth" });
+      }
     </script>
     <nav id="nav" class="navbar navbar-expand-md navbar-dark bg-transparent">
-        <div class="container">
-            <a class="navbar-brand" href="/" aria-label="Logo with link to the home page">
-                <img src="../assets/svg/logo.svg" width="40" height="40" alt="">
-            </a>
-            <button
-                class="navbar-toggler collapsed border-0 d-flex d-md-none flex-column justify-content-around"
-                type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="toggler-icon top-bar text-muted"></span>
-                <span class="toggler-icon middle-bar text-muted"></span>
-                <span class="toggler-icon bottom-bar text-muted"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link" href="about-us.html">Über uns</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="kristina.html">Kristina</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="sebastian.html">Sebastian</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Kontakt</a>
-                    </li>
-                </ul>
-            </div>
+      <div class="container">
+        <a
+          class="navbar-brand"
+          href="/"
+          aria-label="Logo with link to the home page"
+        >
+          <img src="../assets/svg/logo.svg" width="40" height="40" alt="" />
+        </a>
+        <button
+          class="navbar-toggler collapsed border-0 d-flex d-md-none flex-column justify-content-around"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="toggler-icon top-bar text-muted"></span>
+          <span class="toggler-icon middle-bar text-muted"></span>
+          <span class="toggler-icon bottom-bar text-muted"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link" href="about-us.html">Über uns</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="kristina.html">Kristina</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="sebastian.html">Sebastian</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">Kontakt</a>
+            </li>
+          </ul>
         </div>
+      </div>
     </nav>
 
     <main id="contact" class="container">
-        <section class="row">
-
-            <div class="col-12 col-lg-6">
-                <h2>
-                    Kontaktinformationen
-                </h2>
-                <div>
-                    <h3>
-                        Für Wettkampfanfragen
-                    </h3>
-                    <p>
-                        Wenden Sie sich einfach an unseren Athleten Manager: <br>
-                        Dieter Albertus <br>
-                        <a href="mailto:dieter.albertus@freenet.de">dieter.albertus@freenet.de</a>
-                    </p>
-                </div>
-                <div>
-                    <h3>
-                        Für Autogrammkarten
-                    </h3>
-                    <p>
-                        Senden sie einen frankierten Umschlag für die Rückantwort an: <br>
-                        Sebastian Hendel <br>
-                        Krummer Weg 6c <br>
-                        08468 Reichenbach im Vogtland <br>
-                    </p>
-                </div>
-                <div>
-                    <h3>
-                        Für alle anderen Anliegen
-                    </h3>
-                    <p>
-                        Kontaktieren sie uns über <a
-                            href="mailto:kontakt@hendel-running.de">kontakt@hendel-running.de</a>
-                        oder nutzen Sie das
-                        folgende
-                        Kontaktformular.
-                    </p>
-                </div>
+      <section class="row">
+        <div class="col-12 col-lg-6">
+          <h2>Kontaktinformationen</h2>
+          <div>
+            <h3>Für Wettkampfanfragen</h3>
+            <p>
+              Wenden Sie sich einfach an unseren Athleten Manager: <br />
+              Dieter Albertus <br />
+              <a href="mailto:dieter.albertus@freenet.de"
+                >dieter.albertus@freenet.de</a
+              >
+            </p>
+          </div>
+          <div>
+            <h3>Für Autogrammkarten</h3>
+            <p>
+              Senden sie einen frankierten Umschlag für die Rückantwort an:
+              <br />
+              Sebastian Hendel <br />
+              Krummer Weg 6c <br />
+              08468 Reichenbach im Vogtland <br />
+            </p>
+          </div>
+          <div>
+            <h3>Für alle anderen Anliegen</h3>
+            <p>
+              Kontaktieren sie uns über
+              <a href="mailto:kontakt@hendel-running.de"
+                >kontakt@hendel-running.de</a
+              >
+              oder nutzen Sie das folgende Kontaktformular.
+            </p>
+          </div>
+        </div>
+        <div class="col-12 col-lg-6">
+          <form
+            action="https://formspree.io/f/mayzzbvg"
+            method="POST"
+            class="row g-2 mt-lg-0"
+          >
+            <div class="col-12">
+              <input
+                required
+                type="email"
+                name="email"
+                class="form-control text-bg-white border-dark"
+                placeholder="E-Mail-Adresse"
+              />
             </div>
-            <div class="col-12 col-lg-6">
-                <form action="https://formspree.io/f/mayzzbvg" method="POST"
-                    class="row g-2 mt-lg-0">
-                    <div class="col-12"><input required type="email" name="email"
-                            class="form-control text-bg-white border-dark"
-                            placeholder="E-Mail-Adresse"></div>
-                    <div class="col-12">
-                        <textarea required name="message" id="" cols="30" rows="10"
-                            class="form-control text-bg-white border-dark"
-                            placeholder="Nachricht"></textarea>
-                    </div>
-                    <div class="col-12">
-                        <button type="submit"
-                            class="btn btn-lg btn-success w-100 mt-3">Absenden</button>
-                    </div>
-                </form>
+            <div class="col-12">
+              <textarea
+                required
+                name="message"
+                id=""
+                cols="30"
+                rows="10"
+                class="form-control text-bg-white border-dark"
+                placeholder="Nachricht"
+              ></textarea>
             </div>
-        </section>
+            <div class="col-12">
+              <button type="submit" class="btn btn-lg btn-success w-100 mt-3">
+                Absenden
+              </button>
+            </div>
+          </form>
+        </div>
+      </section>
     </main>
 
     <footer>
-        <div class="container">
-            <div class="row align-items-stretch">
-                <div class="col-12 col-md-6">
-                    <div class="h-100 d-flex flex-column align-items-start justify-content-between">
-                        <p>
-
-                            <img src="../assets/svg/logo.svg" alt="Logo" class="img-fluid logo">
-                        </p>
-                        <p class="copyright">
-                            © 2023 Hendel-Running
-                        </p>
-                    </div>
-                </div>
-                <div class="col-6 col-md-3">
-                    <ul class="nav flex-column">
-                        <li class="nav-item"><a class="nav-link link-light"
-                                href="index.html">Startseite</a>
-                        </li>
-                        <li class="nav-item"><a class="nav-link link-light"
-                                href="about-us.html">Über
-                                uns</a>
-                        </li>
-                        <li class="nav-item"><a class="nav-link link-light"
-                                href="kristina.html">Kristina</a>
-                        </li>
-                        <li class="nav-item"><a class="nav-link link-light"
-                                href="sebastian.html">Sebastian</a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="col-6 col-md-3">
-                    <ul class="nav flex-column">
-                        <li class="nav-item"><a class="nav-link link-light"
-                                href="contact.html">Kontakt</a>
-                        </li>
-                        <li class="nav-item"><a class="nav-link link-light"
-                                href="privacy-policy.html">Datenschutz</a>
-                        </li>
-                        <li class="nav-item"><a class="nav-link link-light"
-                                href="legal-details.html">Impressum</a>
-                        </li>
-                    </ul>
-                </div>
+      <div class="container">
+        <div class="row align-items-stretch">
+          <div class="col-12 col-md-6">
+            <div
+              class="h-100 d-flex flex-column align-items-start justify-content-between"
+            >
+              <p>
+                <img
+                  src="../assets/svg/logo.svg"
+                  alt="Logo"
+                  class="img-fluid logo"
+                />
+              </p>
+              <p class="copyright">© 2023 Hendel-Running</p>
             </div>
+          </div>
+          <div class="col-6 col-md-3">
+            <ul class="nav flex-column">
+              <li class="nav-item">
+                <a class="nav-link link-light" href="index.html">Startseite</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link link-light" href="about-us.html">Über uns</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link link-light" href="kristina.html">Kristina</a>
+                <a
+                  class="me-2"
+                  href="https://www.instagram.com/kristina_hendel_"
+                  aria-label="Instagram Kristina Hendel"
+                >
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="16"
+                    height="16"
+                    fill="currentColor"
+                    class="bi bi-instagram"
+                    viewBox="0 0 16 16"
+                  >
+                    <path
+                      d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.917 3.917 0 0 0-1.417.923A3.927 3.927 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.916 3.916 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.926 3.926 0 0 0-.923-1.417A3.911 3.911 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0h.003zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599.28.28.453.546.598.92.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.47 2.47 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.478 2.478 0 0 1-.92-.598 2.48 2.48 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233 0-2.136.008-2.388.046-3.231.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92.28-.28.546-.453.92-.598.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045v.002zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92zm-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217zm0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334z"
+                    /></svg
+                ></a>
+                <a
+                  href="https://www.facebook.com/kristina.bozic.10/"
+                  aria-label="Facebook Kristina Hendel"
+                >
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="16"
+                    height="16"
+                    fill="currentColor"
+                    class="bi bi-facebook"
+                    viewBox="0 0 16 16"
+                  >
+                    <path
+                      d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"
+                    />
+                  </svg>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link link-light" href="sebastian.html"
+                  >Sebastian</a
+                >
+                <a
+                  class="me-2"
+                  href="https://www.instagram.com/sebastian_hendel"
+                  aria-label="Instagram Sebastian Hendel"
+                >
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="16"
+                    height="16"
+                    fill="currentColor"
+                    class="bi bi-instagram"
+                    viewBox="0 0 16 16"
+                  >
+                    <path
+                      d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.917 3.917 0 0 0-1.417.923A3.927 3.927 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.916 3.916 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.926 3.926 0 0 0-.923-1.417A3.911 3.911 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0h.003zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599.28.28.453.546.598.92.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.47 2.47 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.478 2.478 0 0 1-.92-.598 2.48 2.48 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233 0-2.136.008-2.388.046-3.231.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92.28-.28.546-.453.92-.598.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045v.002zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92zm-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217zm0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334z"
+                    /></svg
+                ></a>
+                <a
+                  href="https://www.facebook.com/basti.hendel"
+                  aria-label="Facebook Sebastian Hendel"
+                >
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="16"
+                    height="16"
+                    fill="currentColor"
+                    class="bi bi-facebook"
+                    viewBox="0 0 16 16"
+                  >
+                    <path
+                      d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"
+                    />
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+          <div class="col-6 col-md-3">
+            <ul class="nav flex-column">
+              <li class="nav-item">
+                <a class="nav-link link-light" href="contact.html">Kontakt</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link link-light" href="privacy-policy.html"
+                  >Datenschutz</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link link-light" href="legal-details.html"
+                  >Impressum</a
+                >
+              </li>
+            </ul>
+          </div>
         </div>
+      </div>
     </footer>
-</body>
+  </body>
+</html>
