update header in sebastian.html

--- a/src/pages/sebastian.html
+++ b/src/pages/sebastian.html
@@ -79,7 +79,7 @@
     <main id="sebastian" class="subpage">
       <header class="subpage-header">
         <div class="container">
-          <h2>Marathonmaschine</h2>
+          <h2>Marathonmaschine in Aktion</h2>
           <h1>
             <span class="fName">Sebastian</span>
             <span class="lName">Hendel</span>
