--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -95,9 +95,9 @@
             <p>
               Senden sie einen frankierten Umschlag für die Rückantwort an:
               <br />
-              Sebastian Hendel <br />
-              Krummer Weg 6c <br />
-              08468 Reichenbach im Vogtland <br />
+              Sebastian Hendel<br />
+              Postfach 1234<br />
+              08461 Reichenbach <br />
             </p>
           </div>
           <div>
