chore: optimize config for html-bundler-webpack-plugin

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -14,6 +14,10 @@
     />
     <meta name="robots" content="index, follow" />
     <title>Hendel Running</title>
+
+    <link href="../scss/commons.scss" rel="stylesheet">
+    <link href="../scss/index.scss" rel="stylesheet">
+    <script src="../js/main.js" defer="defer"></script>
   </head>
 
   <body>
