--- a/src/pages/about-us.html
+++ b/src/pages/about-us.html
@@ -14,6 +14,9 @@
     />
     <meta name="robots" content="index, follow" />
     <title>Sebastian und Kristina Hendel</title>
+
+    <link href="../scss/commons.scss" rel="stylesheet">
+    <link href="../scss/about-us.scss" rel="stylesheet">
   </head>
 
   <body>
