--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -14,6 +14,9 @@
     />
     <meta name="robots" content="index, follow" />
     <title>Kontakt</title>
+
+    <link href="../scss/commons.scss" rel="stylesheet">
+    <link href="../scss/contact.scss" rel="stylesheet">
   </head>
 
   <body>
