--- a/src/pages/kristina.html
+++ b/src/pages/kristina.html
@@ -14,6 +14,9 @@
     />
     <meta name="robots" content="index, follow" />
     <title>Kristina Hendel</title>
+
+    <link href="../scss/commons.scss" rel="stylesheet">
+    <link href="../scss/kristina.scss" rel="stylesheet">
   </head>
 
   <body>
