--- a/src/pages/legal-details.html
+++ b/src/pages/legal-details.html
@@ -5,6 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="../assets/svg/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Impressum</title>
+
+    <link href="../scss/commons.scss" rel="stylesheet">
   </head>
 
   <body>
