--- a/src/pages/sebastian.html
+++ b/src/pages/sebastian.html
@@ -14,6 +14,9 @@
     />
     <meta name="robots" content="index, follow" />
     <title>Sebastian Hendel</title>
+
+    <link href="../scss/commons.scss" rel="stylesheet">
+    <link href="../scss/sebastian.scss" rel="stylesheet">
   </head>
 
   <body>
