--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -3,13 +3,13 @@
 
 <head>
   <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-0QW22P27H8"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-0H9EPTRZ97"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
 
-    gtag('config', 'G-0QW22P27H8');
+    gtag('config', 'G-0H9EPTRZ97');
   </script>
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="../assets/svg/logo.svg" />
