update pb marathon Sebastian

--- a/src/pages/sebastian.html
+++ b/src/pages/sebastian.html
@@ -224,8 +224,8 @@
               </li>
               <li>
                 <span>Marathon</span>
-                <span>2:10:14 h</span>
-                <span>München (2023)</span>
+                <span>2:08:51 h</span>
+                <span>Hamburg (2024)</span>
               </li>
             </ul>
           </div>
